# LR7

./: CMakeLists.txt  Task_1.cpp  Task_1.h  Task_2.cpp  Task_2.h  Task_3.cpp  Task_3.h  Task_4.cpp  Task_4.h  Task_5.cpp  Task_5.h  main.cpp
